--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-"name": "newAcc",
+"name": "Bimsara",
 "version": "2.1.2",
-"description": "newAcc has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️",
+"description": "Bimsara has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️",
 "main": "start.js",
 "scripts": {
-"start": "pm2 start start.js --deep-monitoring --attach --name newAcc",
-"stop": "pm2 stop newAcc",
-"restart": "pm2 restart newAcc"
+"start": "pm2 start start.js --deep-monitoring --attach --name Bimsara",
+"stop": "pm2 stop Bimsara",
+"restart": "pm2 restart Bimsara"
 },
 "dependencies": {
 "@whiskeysockets/baileys": "git+https://github.com/prabathLK/Baileys-6.0.0.git",
